# bicata

./: .gitignore  bibliography.bib  groundwork.docx  groundwork.html  groundwork.qmd  pyproject.toml  readme.md
data/: lambda4.1_variational.csv  lambda4.1start.csv  out_sankey_cond_anon.tsv
data/PPT-seq/: README.md
data/principles/: README.md  design_matrix.tsv  science.abk2066_table_s3.xlsx  science.abk2066_table_s4.xlsx
scripts/: infer_2Dz_cmd.py  infer_cmd.py  infer_cmd_ale.py  sparse_orthogonal_posredux_design_sigmas_kappalikpois_4out_p0prior.stan  sparse_orthogonal_posredux_design_sigmas_kappalikpois_dAm_p0prior.stan  sparse_orthogonal_posredux_design_sigmas_kappalikpois_p0prior.stan  sparse_orthogonal_posredux_design_sigmas_o.stan  sparse_orthogonal_posredux_design_sigmas_zaft.stan  sparse_orthogonal_posredux_design_sigmas_zaft_p0prior.stan  spbica_2Dz_diris_p0prior.stan
spbica/: __init__.py  alignment.py  dashboard.py  plotting.py  processing.py
