[project]
name = "spbica"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "carrascomj", email = "carrascomurielj@gmail.com" }
]
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.3",
    "arviz==0.17.1",
    "plotnine>=0.12.4",
    # "matplotlib>=3.8.1",
    "tqdm>=4.44.1",
    "panel>=1.2.3",
    "plotly>=5.17.0",
    "typer>=0.9.0",
    "numba>=0.58.1",
    "pymodulon @ git+https://github.com/carrascomj/pymodulon@update-fix-39",
    "rich>=13.7.0",
    "patchworklib>=0.6.3",
    "gffpandas>=1.2.0",
    "dna-features-viewer>=3.1.4",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.5",
    "pytest>=7.4.2",
    "ipykernel>=6.25.2",
    "pyrsistent>=0.19.3",
    "cmdstanpy>=1.0.0",
    "pynvim",
    "jupyter_client",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["spbica", "tests"]
